# cd

./: ASTNode.cpp  ASTNode.h  CMakeLists.txt  FIRST_COMMIT_GUIDE.md  GITHUB_COMMIT_SCHEDULE.md  Lexer.cpp  Lexer.h  Makefile  Optimizer.cpp  Optimizer.h  PROJECT_DOCUMENTATION.md  Parser.cpp  Parser.h  README.md  README.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  TACGenerator.cpp  TACGenerator.h  Token.h  gui_optimizer.py  input_code.txt  main.cpp  optimized_output.txt  parse_tree.txt  symbol_table.txt  tac.txt  tokens.txt  utils.cpp  utils.h
include/: ast.hpp  optimizer.hpp  parser.hpp
input/: complex_test.c  test.c
output/: optimized_complex_test.c  optimized_test.c
src/: ast.cpp  main.cpp  optimizer.cpp  parser.cpp
